CHANGES:

0.6.6 -> 0.7.0
- Basic WP4.2 file format support (Marc Maurer)
- Basic WP5 file format support (Marc Maurer)
- Cleanup file header handling mess (Marc Maurer)
- Removal of stale files (Marc Maurer)
- Several fixes to make libwpd compile on Win32/MSVC (Marc Maurer)
- Make the wpd2text converter use the high level parsing framework
  to support WP4 and WP5 documents as well (Marc Maurer)
- Restructure the class hierarchy to allow for code sharing
  between the different high level listeners (Marc Maurer)
- Updated MSVC6 project files, we have a win32 lib again, yay! (Marc Maurer)
- Reduce the number of installed header files (Marc Maurer)
- Add mingw build system (Fridrich Strba)
- Fix rpm build system with respect to "make dist" (Rui Miguel Seabra)

0.6.5 -> 0.6.6
- Add an encryption exception thrown for encrypted documents to allow
  for more verbose error detection (Marc Maurer)

0.6.4 -> 0.6.5
- Fix parsing error that caused libwpd to hang on various documents (Marc Maurer)

0.6.3 -> 0.6.4
- Fix illegal memory access (Marc Maurer)

0.6.2 -> 0.6.3
- More robust importing of numbered lists (William Lachance)
- Support more types of table cell colouring/shading (William)

0.6.1 -> 0.6.2
- Export the following WP6 Attributes: redlining, double underlining, 
small caps, outlining, and blink (William Lachance)
- Build system fix (Rui Miguel Seabra)

0.6.0 -> 0.6.1
- Change format of lists output to to not embed list levels inside 
list elements (William Lachance)

0.5.0 -> 0.6.0
- Tibetan extended character support (Ted Lemon)
- Border-less table cell support (William Lachance)
- Support for some odd types of tables (William)
- Top/bottom margin change support (William)
- Header/footer support (William)
- Built-in filetype detection (William)
- Handle corrupt token (0x00) correctly (William)
- Code refactoring and bugfixes (William)
- Fix bug with long documents and tables (William)

0.4.0 -> 0.5.0
- rpm spec (Rui Miguel Silva Seabra)